--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html lang="en">
-<head>
+<html lang="tr" xml:lang="tr" xmlns="http://www.w3.org/1999/xhtml"><head>
   <meta charset="utf-8">
   <title>Orman</title>
   <base href="/">
